* Added the Amber Clump.
* Added the Primordial Beach biome.
* Added the [REDACTED] block, found only in Abandoned Farms.
* Added Glow Gourd Seeds. (Currently only place the "grown" version of the Gourd!)
* Added two new paintings from ["Iri_Dark!"](https://bsky.app/profile/iridark.bsky.social)
* Big Beaks now have variants!
* Maps now work in the Bygone! They "fill out" depending on what Y level the Players feet are at!

# Terrain Generation changes and additions:
* Added the "Primordial Beach" biome
* Added noise Pillars to the terrain
* New cave generation
* Redistributed biomes (Beaches will generate next to Oceans, Amber Deserts are less common, and  Primordial Oceans are smaller)
* Made the overall terrain more traversable by flattening it!
* Ores generate more as a whole in order to encourage exploring cave expeditions.

# Amber Desert changes and additions:
* Is now made up of Amber Sand and Amber Sandstone.
* Increased amount of Amber "boulders" in the biome.
* Turned down the light levels of all Amber blocks.
* Patches of Amber Clumps generate on walls and ceilings.
* Pointed Amber now generates only on ceilings.
* Tweaked the fog and sky colors to fit the dimension better!
* Removed Creosotes from generating in the biome.

# Ancient Hook changes:
* Ancient Hook now discards when in liquids. (this is to fix strange behaviour with water),
* Ancient Hook now discards when the player is further than 64 blocks away.,
* Ancient Hook now discards when the shift key is pressed.
* Ancient Hook now attaches to blocks way faster as its shoot speed has been increased a lot.
* Added Ancient Hook as loot in Bygone Mineshafts.
* Ancient Hook sounds are planned for 1.3.1!

# The Whiskbill
* A new passive mob found only in the Underhang.
* Will seek out Glow Gourds and devour them, spitting out the Seeds!
* Will retreat from nearby players and poison players that hurt them!
* Temporarily are using Sniffer sounds, but unique sounds are planned for 1.3.1!